examples/test/testpolicy9796.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9796
  namespace: namespace228
spec:
  podSelector:
    matchLabels:
      key0: value14
      key7: value2
      key25: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value7
          key24: value20
          key0: value16
      podSelector:
        matchLabels:
          key34: value31
          key29: value8
          key42: value37
